--- a/CSS/Adeline.css
+++ b/CSS/Adeline.css
@@ -1,5 +1,4 @@
 
-
        body {
 
         background-color: rgba(26, 232, 229, 0.373);
@@ -59,7 +58,7 @@ ul{
        .ecran{ 
               
     width: 100%; 
-        height: 65vh; 
+        height: 80vh; 
         background-image: url("../IMAGES/Japon.jpg"); 
         background-position: center; 
         background-size: cover;
@@ -75,31 +74,32 @@ ul{
          text-decoration: none;
      }
    
-       .carte{ 
-        width: 10%; 
-        max-width: 90px; 
+     .carte{ 
+        width: 450%; 
+        max-width: 350px; 
         color: aliceblue; 
         text-align: center; 
-        padding: 5px 10px; 
+        padding: 20px 30px; 
    
-        border: 40px solid rgba(255,255,255, 0.3); 
-        background: rgba(255,255,255, 0.2); 
-        border-radius: 55px; 
-        box-shadow: 10px 30px rgb(20, 18, 18); 
-        backdrop-filter: blur(50px); 
+        border: 4px solid rgba(255,255,255, 0.3); 
+        background: rgb(255, 255, 255); 
+        border-radius: 20px; 
+        box-shadow: 10px 30px rgba(19, 17, 17, 0.861); 
+        backdrop-filter: blur(5px); 
        
        } 
        
        .carte img{ 
-       width: 250px; 
-        border-radius: 50%;        
+       width: 300px; 
+        border-radius: 30%; 
+       
        } 
        
        .carte .reseau img{ 
        
        width: 100px; 
-       border-radius: 10%; 
-       margin: 20px 115px; 
+       border-radius: 50%; 
+       margin: 20px 30px; 
        
        } 
        
@@ -116,3 +116,4 @@ ul{
             }
   
     
+ 
