--- a/CSS/Adeline.css
+++ b/CSS/Adeline.css
@@ -1,14 +1,15 @@
        body {
-p{
-    text-align: initial;
-}
-        background-color: rgba(26, 232, 229, 0.373);
+
+        box-shadow: none;
+
+        background-color: rgba(74, 192, 192, 0.373);
+        margin-right: auto;
+        margin-left: auto;
 
  }
 
     
 h2{
-    box-shadow: ;
     color: rgb(4, 4, 5);
     font-weight: 100;
         text-align: center;
@@ -36,7 +37,7 @@ p{
 ul{
 
     color: rgb(4, 4, 5);
-    font-weight: 800;
+    font-weight: 100;
         text-align: center;
         display: block;
         margin-right: auto;
@@ -87,24 +88,23 @@ ul{
         border: 4px solid rgba(255,255,255, 0.3); 
         background: rgb(255, 255, 255); 
         border-radius: 20px; 
-        box-shadow: 10px 30px rgba(19, 17, 17, 0.861); 
+        box-shadow: 10px 40px rgba(30, 63, 93, 0.861); 
         backdrop-filter: blur(5px); 
        
        } 
        
        .carte img{ 
-       width: 300px; 
-        border-radius: 20%; 
-       
-       } 
-       
+        width: 250px; 
+         border-radius: 20%; 
+                } 
+        
        .carte .reseau img{ 
        
-       width: 100px; 
-       border-radius: 10%; 
-       margin: 10px 10px; 
-       
-       } 
+        width: 25px; 
+        border-radius: 100%; 
+        margin: 300px 10px; 
+        
+        } 
        
   
 
