--- a/CSS/Adeline.css
+++ b/CSS/Adeline.css
@@ -7,7 +7,17 @@
         margin-left: auto;
 
  }
+a{
 
+    color: rgb(4, 4, 5);
+    font-weight: 800;
+        text-align: center;
+      
+        margin-right: auto;
+        margin-left: auto;     
+    font-style: calc();
+    text-align: center;
+}
     
 h2{
     color: rgb(4, 4, 5);
@@ -62,8 +72,8 @@ ul{
        .ecran{ 
               
     width: 100%; 
-        height: 55vh; 
-        background-image: url("../IMAGES/Japon.jpg"); 
+        height: 80vh; 
+        background-image: url("../IMAGES/Forêt.png"); 
         background-position: center; 
         background-size: cover;
         display: flex; 
@@ -76,6 +86,7 @@ ul{
          color: rgb(17, 12, 12);
          cursor: pointer;
          text-decoration: none;
+     
      }
    
      .carte{ 
